Add compat for new enchantment names